feat: Made a video page for videos

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY = AIzaSyAYpWw88PRLgg1ZeyL93IIw3MT1WojLrgU
-REACT_APP_AUTH_DOMAIN = skill-check-959aa.firebaseapp.com
-REACT_APP_PROJECT_ID = skill-check-959aa
-REACT_APP_STORAGE_BUCKET = skill-check-959aa.appspot.com
-REACT_APP_MESSAGING_SENDER = 185191561795
-REACT_APP_ID = 1:185191561795:web:9016a488b8ea21927572f6
-REACT_APP_DATABASE_URL = https://skill-check-959aa-default-rtdb.asia-southeast1.firebasedatabase.app
+REACT_APP_API_KEY = AIzaSyCv2zfp477JCxblZVMQ_sJh-CXat4zIiok
+REACT_APP_AUTH_DOMAIN = skill-check-96e0b.firebaseapp.com
+REACT_APP_PROJECT_ID = skill-check-96e0b
+REACT_APP_STORAGE_BUCKET = skill-check-96e0b.appspot.com
+REACT_APP_MESSAGING_SENDER = 451036546695
+REACT_APP_ID = 1:451036546695:web:cfbfd47481f6a81efc9a22
+REACT_APP_DATABASE_URL = https://skill-check-96e0b-default-rtdb.asia-southeast1.firebasedatabase.app
