feat: Quiz performation and score generation completed

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY = AIzaSyCv2zfp477JCxblZVMQ_sJh-CXat4zIiok
-REACT_APP_AUTH_DOMAIN = skill-check-96e0b.firebaseapp.com
-REACT_APP_PROJECT_ID = skill-check-96e0b
-REACT_APP_STORAGE_BUCKET = skill-check-96e0b.appspot.com
-REACT_APP_MESSAGING_SENDER = 451036546695
-REACT_APP_ID = 1:451036546695:web:cfbfd47481f6a81efc9a22
-REACT_APP_DATABASE_URL = https://skill-check-96e0b-default-rtdb.asia-southeast1.firebasedatabase.app
+REACT_APP_API_KEY=AIzaSyAXYFr-hocDY5fdqxWhTusSCz-Q4lzsglI
+REACT_APP_AUTH_DOMAIN=skillcheck-17af7.firebaseapp.com
+REACT_APP_PROJECT_ID=skillcheck-17af7
+REACT_APP_STORAGE_BUCKET=skillcheck-17af7.appspot.com
+REACT_APP_MESSAGING_SENDER=230618799762
+REACT_APP_ID=1:230618799762:web:b97a1e2d671aaeddbe504b
+REACT_APP_DATABASE_URL=https://skillcheck-17af7-default-rtdb.asia-southeast1.firebasedatabase.app
